--- a/TestSqlCopy/.classpath
+++ b/TestSqlCopy/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="C:/Program Files/pleiades/workspace/TestSqlCopy/lib/ibatis-2.3.4.726.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/pleiades/workspace/TestSqlCopy/lib/mysql-connector-java-5.1.15-bin.jar"/>
+	<classpathentry kind="lib" path="C:/Users/8_bra/git/TestSqlCopy/TestSqlCopy/lib/ibatis-2.3.4.726.jar"/>
+	<classpathentry kind="lib" path="C:/Users/8_bra/git/TestSqlCopy/TestSqlCopy/lib/mysql-connector-java-5.1.15-bin.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
